# PerceptualLoss

./: .gitignore  CLAUDE.md
Analysis/: analyze.py  results.csv
EMLNETSaliency/backbone/: res_decoder.pth
NVRC/: loss_utils.py  losses.py  losses_helpers.py  main_nvrc.py  main_utils.py  tasks.py  utils.py
NVRC/compress_models/: __init__.py
NVRC/loss_models/EMLNETSaliency/: eval.py  eval_combined.py  train.py  train_decoder.py  train_resnet.py
NVRC/loss_models/RankDVQA/: test.py  train.py  utils.py
NVRC/loss_models/RankDVQA/STANet/: data_generation.py  test.py  train.py
NVRC/loss_models/RankDVQA/STANet/data/: dataset.py  dataset_test.py
NVRC/loss_models/RankDVQA/data/: dataset.py
NVRC/loss_models/WassersteinDistortion/: wasserstein_distortion_test_example.py
NVRC/loss_models/WassersteinDistortion/wasserstein_distortion/: __init__.py  wasserstein_distortion.py
NVRC/models/: __init__.py
NVRC/scripts/configs/nvrc/overfit/: s1-180e.yaml  s1-60e.yaml  s2-5e.yaml
NVRC/scripts/configs/tasks/overfit/: l1_ms-ssim-5x5.yaml  l1_ms-ssim.yaml  rankdvqa.yaml  wd-saliency-temp.yaml  wd-saliency.yaml  wd-sigma.yaml  wd.yaml  wd_saliency.yaml
NVRC/scripts/train/: nvrc_loss.sh  nvrc_wd.sh  overfitting_uvg_nvrc.sh  run_compare.sh
NVRC/tests/: test_temporal_loss.py
RankDVQA/: test.py
WassersteinDistortion/: README.md  pyproject.toml  wasserstein_distortion_test_example.py
WassersteinDistortion/wasserstein_distortion/: __init__.py  wasserstein_distortion.py
docs/superpowers/plans/: 2026-05-28-temporal-loss.md
docs/superpowers/specs/: 2026-05-28-temporal-loss-design.md
